// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Build content map for > autotitle chain (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-eddda5cfbae0eafc7d2cb8fc3548600f83c5553c9b2141b7a6fecf7e92a4bd4a",
      "size": 229,
    },
    "b.md": {
      "hash": "sha256-621b327193cccd65c7f04afe761395a7665a20cdac8be4876277f73d352ec81c",
      "size": 233,
    },
    "c.md": {
      "hash": "sha256-b346d6adb39540e4024268ee64201e774e09a4ef05b75ec37dc6f9ae0fd5713c",
      "size": 220,
    },
    "toc.yaml": {
      "hash": "sha256-8bf60b589e4bb972e7b9ca9d924f6f8911f9d41e268bf710f0d5197246b576fd",
      "size": 157,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle chain (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-eddda5cfbae0eafc7d2cb8fc3548600f83c5553c9b2141b7a6fecf7e92a4bd4a",
      "size": 229,
    },
    "b.md": {
      "hash": "sha256-621b327193cccd65c7f04afe761395a7665a20cdac8be4876277f73d352ec81c",
      "size": 233,
    },
    "c.md": {
      "hash": "sha256-b346d6adb39540e4024268ee64201e774e09a4ef05b75ec37dc6f9ae0fd5713c",
      "size": 220,
    },
    "toc.yaml": {
      "hash": "sha256-8bf60b589e4bb972e7b9ca9d924f6f8911f9d41e268bf710f0d5197246b576fd",
      "size": 157,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle target with include (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/snippet.md": {
      "hash": "sha256-6ddfc7bf547e68bff61196f26379a3a3907683d94b3083d05689febe4d2ecf0e",
      "size": 159,
    },
    "a.md": {
      "hash": "sha256-28d06a8af872323ff935049865343db55baa8e1519136cfc29023b11e2d8a9ca",
      "size": 235,
    },
    "b.md": {
      "hash": "sha256-592437696d21c2c5c4857e368951684d9ee5ee9751730e8d3cbaeba74c48d352",
      "size": 244,
    },
    "toc.yaml": {
      "hash": "sha256-f0e5f8342a96da110f1a0c3dc468ce8bf536d9971b7f6268b7afc6327ba2d163",
      "size": 144,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle target with include (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-28d06a8af872323ff935049865343db55baa8e1519136cfc29023b11e2d8a9ca",
      "size": 235,
    },
    "b.md": {
      "hash": "sha256-003c883ddfead42eb365e6c7891b0fc7092682bbec1f7f126b42906ae7162c86",
      "size": 321,
    },
    "toc.yaml": {
      "hash": "sha256-f0e5f8342a96da110f1a0c3dc468ce8bf536d9971b7f6268b7afc6327ba2d163",
      "size": 144,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > diamond includes (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/branch-a.md": {
      "hash": "sha256-7b8ccea81a5afa69b5297d556b11994e854c56fc375dfd1da35eadfd9996e00f",
      "size": 204,
    },
    "_includes/branch-b.md": {
      "hash": "sha256-5af4469cc2cc309ea5b18ddf494554fd04fa68865c1d8f3aae9826a8dc65425f",
      "size": 205,
    },
    "_includes/shared.md": {
      "hash": "sha256-530fee754a1488fee73603d3307cfb87751310ea7b3a67b284a2708cd12ca23c",
      "size": 156,
    },
    "index.md": {
      "hash": "sha256-28ea9c8735907b0bc00201b9a3ec437cd6c78afed99ef8c88084a1a35aaf6aff",
      "size": 358,
    },
    "toc.yaml": {
      "hash": "sha256-5309b6c21d914169deeb265ac1988546c6c0ab47d100b89c4083efb3f711f872",
      "size": 116,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > diamond includes (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-9093683d77439fd2ce34f0caa73e3242e292fc60d9d3bd0f6638069c9eec2b17",
      "size": 771,
    },
    "toc.yaml": {
      "hash": "sha256-5309b6c21d914169deeb265ac1988546c6c0ab47d100b89c4083efb3f711f872",
      "size": 116,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > nested includes (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/level1.md": {
      "hash": "sha256-9b7485aaf58072f373641be1ec78f9896123e34cdadb713beba264fd480e2e36",
      "size": 222,
    },
    "_includes/level2.md": {
      "hash": "sha256-787c184e3f5a0722492e96268bcd34cbafff60597a28264d6a1d787c2ef55bc4",
      "size": 163,
    },
    "index.md": {
      "hash": "sha256-1c05bafedc846cb2d49384cbaf2ac991cd1ab026b9a4872aa9e7472cdbe7fe47",
      "size": 313,
    },
    "toc.yaml": {
      "hash": "sha256-8044d42eecbbbfbf108ef785d04d322e72b2381cea30243cf3accc2ccf469f89",
      "size": 115,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > nested includes (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-2b5ae84808b20962581c12a9d5cb766ae38efb0e10a2a5338f332259ceef4773",
      "size": 546,
    },
    "toc.yaml": {
      "hash": "sha256-8044d42eecbbbfbf108ef785d04d322e72b2381cea30243cf3accc2ccf469f89",
      "size": 115,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with an include and a picture (mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/snippet.md": {
      "hash": "sha256-468438ef9fe4562cd13cbec7140392a29f38500c6d09c74174ed1f92e73e9b4c",
      "size": 128,
    },
    "index.md": {
      "hash": "sha256-0f6c019bb9912842e7d74f8bc1b6ed7ea4e37ae4b2bf94f569c79ef135c2cc4a",
      "size": 292,
    },
    "logo.svg": {
      "hash": "sha256-d13530939abcb6584d6b07c97ded2d9fc6d5751ef4c0262afe36cee3fad0d51c",
      "size": 3402,
    },
    "toc.yaml": {
      "hash": "sha256-08e2907230e064c5ce52e5859d5a3780ed84c41756f921f896a88033a40e0ae9",
      "size": 108,
    },
  },
  "pageAssets": {
    "index.md": [
      "logo.svg",
    ],
  },
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with an include and a picture (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-3f19545c5fee74ffcf3dcd14e268834d861733d1588152d76640a218b69fa104",
      "size": 338,
    },
    "logo.svg": {
      "hash": "sha256-d13530939abcb6584d6b07c97ded2d9fc6d5751ef4c0262afe36cee3fad0d51c",
      "size": 3402,
    },
    "toc.yaml": {
      "hash": "sha256-08e2907230e064c5ce52e5859d5a3780ed84c41756f921f896a88033a40e0ae9",
      "size": 108,
    },
  },
  "pageAssets": {
    "index.md": [
      "logo.svg",
    ],
  },
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with autotitle links between pages (mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-0eb286569d8ad0b932a4ac85b84d1ae577a7d1128b7c652171550f0a656be2fc",
      "size": 234,
    },
    "other.md": {
      "hash": "sha256-f3f71589a0773b5bb4aa98b2366a031c04eaa6febd98c32b118db673b22e3f4e",
      "size": 212,
    },
    "toc.yaml": {
      "hash": "sha256-1455d101a04ae60d37e5ace467d36e4c650e481d90f22ce46cd7b637c33cf541",
      "size": 145,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with autotitle links between pages (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-0eb286569d8ad0b932a4ac85b84d1ae577a7d1128b7c652171550f0a656be2fc",
      "size": 234,
    },
    "other.md": {
      "hash": "sha256-f3f71589a0773b5bb4aa98b2366a031c04eaa6febd98c32b118db673b22e3f4e",
      "size": 212,
    },
    "toc.yaml": {
      "hash": "sha256-1455d101a04ae60d37e5ace467d36e4c650e481d90f22ce46cd7b637c33cf541",
      "size": 145,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;
